# eratemanager

./: .dockerignore  .gitignore  CHANGELOG.md  Containerfile  FEATURE_TOKEN_EXPIRATION.md  Makefile  README.md  README_AUTODISCOVERY.md  README_SVELTE_UI.md  build-and-deploy.sh  go.mod  go.sum  package.json  patch_roles.py  pyproject.toml  requirements.txt  setup.cfg
.changeset/: README.md  add-resend-support.md  admin-onboarding-wizard.md  api-restructure-and-swagger.md  auth-rbac-implementation.md  cleanup-svelte-ui.md  combined-feature-update.md  enhance-rbac-ui.md  fix-casbin-persistence-and-settings.md  fix-email-verification-and-ui.md  fix-postgres-dsn.md  fix-user-creation.md  fix-whud-tls-secure.md  fix-whud-tls.md  implement-email-notifications.md  implement-rbac-and-fix-user-creation.md  react-ui-redesign.md  refactor-gorm-and-providers.md  ui-auth-fixes.md  water-providers.md  weekly-refresh-default.md
.github/: pull_request_template.md
cemc_rate_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cemc_rates/: __init__.py  api.py  cli.py  downloader.py  normalizer.py  parser.py
docs/: ADDING_PROVIDER.md  docs.go  swagger.json  swagger.yaml
eratemanager/: api.py  cli.py  diffing.py
grafana/: dashboard.json  eratemanager_dashboard.json
scripts/: sync-version.js
snapshots/: residential_v1.json
tests/: test_cli.py  test_diffing.py  test_end_to_end.py  test_normalizer.py  test_parser.py  test_versioning.py
tools/: check_rate_change_and_open_issue.py  scaffold_provider.py  update_snapshot.py
ui-react/: index.html  (+3 more)
(+210 files in other folders)
