[metadata]
name = cemc-rate-parser
version = 0.1.0
description = Automated parser and normalized API for CEMC residential energy rate schedules.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10

[options.entry_points]
console_scripts =
    cemc-rates = cemc_rates.cli:main
